--- a/java-ee/pom.xml
+++ b/java-ee/pom.xml
@@ -15,6 +15,7 @@
             <groupId>jakarta.servlet</groupId>
             <artifactId>jakarta.servlet-api</artifactId>
             <version>6.0.0</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 
