--- a/StudentRegistrationPortal/src/main/webapp/WEB-INF/web.xml
+++ b/StudentRegistrationPortal/src/main/webapp/WEB-INF/web.xml
@@ -19,4 +19,11 @@
         <param-name>db-password</param-name>
         <param-value>Syrex@1234</param-value>
     </context-param>
+
+    <context-param>
+        <param-name>myparm</param-name>
+        <param-value>Hello my param</param-value>
+    </context-param>
+
+
 </web-app>
