--- a/StudentRegistrationPortal/src/main/webapp/WEB-INF/web.xml
+++ b/StudentRegistrationPortal/src/main/webapp/WEB-INF/web.xml
@@ -26,4 +26,15 @@
     </context-param>
 
 
+    <filter>
+        <filter-name>CORSFilter</filter-name>
+        <filter-class>lk.ijse.gdse.aad68.studentmanagementportal.filter.CORSFilter</filter-class>
+    </filter>
+
+    <filter-mapping>
+        <filter-name>CORSFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+
+
 </web-app>
